# terrana

./: .dockerignore  .editorconfig  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  Makefile  README.md  SECURITY.md  bench.sh  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  python-publish.yml  release.yml
python/: .gitignore  Cargo.toml  pyproject.toml
python/src/: lib.rs
python/tests/: test_terrana.py
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/db/: loader.rs  mod.rs  query.rs
src/geometry/: area.rs  buffer.rs  dissolve.rs  hull.rs  measure.rs  mod.rs  simplify.rs
src/handlers/: geometry.rs  meta.rs  mod.rs  query.rs  within.rs
src/index/: build.rs  mod.rs
src/output/: csv_out.rs  geojson_out.rs  json_out.rs  mod.rs
src/server/: middleware.rs  mod.rs
src/store/: loader.rs  mod.rs
testdata/: bench.sh  generate.py  generate_250m.py  generate_benchdata.py  observations.csv  parks.geojson
tests/: api.rs
