[package]
name = "terrana"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "terrana"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
duckdb = { version = "1", features = ["bundled"] }
geo = "0.29"
geo-types = "0.7"
geojson = { version = "1", features = ["geo-types"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
chrono = "0.4"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "8"
tempfile = "3"
