[package]
name = "terrana-py"
version = "0.2.0"
edition = "2021"
publish = false
description = "Python bindings for Terrana — spatial queries and geodesic geometry"
license = "MIT OR Apache-2.0"

# Builds directly into the Python module `terrana`. It can take that name because
# the engine crate it wraps is imported under the alias `terrana_core` below — a
# crate and a same-named `#[pymodule] fn` can't coexist in one file.
[lib]
name = "terrana"
crate-type = ["cdylib"]

[dependencies]
# Imported as `terrana_core` (not `terrana`) so it doesn't collide with the
# `#[pymodule] fn terrana` in src/lib.rs — a local item named `terrana` shadows a
# dependency crate of the same name, which breaks `terrana::...` path resolution.
terrana_core = { package = "terrana", path = "..", features = ["server"] }
# abi3-py39: build a single stable-ABI wheel that runs on CPython 3.9 .. 3.14+.
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
tokio = { version = "1", features = ["full"] }
