[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "terrana"
description = "Spatial queries and geodesic geometry for Python"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
keywords = ["spatial", "gis", "geospatial", "duckdb", "geodesic"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
# Version is read from python/Cargo.toml (kept in lockstep with the Rust crate).
dynamic = ["version"]

# `pip install terrana` installs a `terrana` console command that runs the same CLI
# as the Rust binary (`terrana serve <file> …`). The launcher imports the compiled
# extension module and calls `_run_cli`, which reads sys.argv and serves.
[project.scripts]
terrana = "terrana:_run_cli"
